--- a/Capstone-EDA.ipynb
+++ b/Capstone-EDA.ipynb
@@ -353,7 +353,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# define a function that accepts text and returns the polarity\n",
     "def detect_sentiment(text):\n",
     "    return TextBlob(str(text)).sentiment.polarity"
    ]
@@ -601,7 +600,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# map existing values to a different set of values\n",
     "df['class'] = df.label.map({'positive':1, 'negative':0, 'neutral':2})"
    ]
   },
@@ -880,9 +878,9 @@
     "critical = chi2.ppf(prob, dof)\n",
     "print('probability=%.3f, critical=%.3f, stat=%.3f' % (prob, critical, stat))\n",
     "if abs(stat) >= critical:\n",
-    "\tprint('Dependent (reject H0)')\n",
+    "    print('Dependent (reject H0)')\n",
     "else:\n",
-    "\tprint('Independent (fail to reject H0)')"
+    "    print('Independent (fail to reject H0)')"
    ]
   },
   {
@@ -925,9 +923,9 @@
     "critical = chi2.ppf(prob, dof)\n",
     "print('probability=%.3f, critical=%.3f, stat=%.3f' % (prob, critical, stat))\n",
     "if abs(stat) >= critical:\n",
-    "\tprint('Dependent (reject H0)')\n",
+    "    print('Dependent (reject H0)')\n",
     "else:\n",
-    "\tprint('Independent (fail to reject H0)')"
+    "    print('Independent (fail to reject H0)')"
    ]
   },
   {
@@ -962,9 +960,9 @@
     "critical = chi2.ppf(prob, dof)\n",
     "print('probability=%.3f, critical=%.3f, stat=%.3f' % (prob, critical, stat))\n",
     "if abs(stat) >= critical:\n",
-    "\tprint('Dependent (reject H0)')\n",
+    "    print('Dependent (reject H0)')\n",
     "else:\n",
-    "\tprint('Independent (fail to reject H0)')"
+    "    print('Independent (fail to reject H0)')"
    ]
   },
   {
@@ -999,9 +997,9 @@
     "critical = chi2.ppf(prob, dof)\n",
     "print('probability=%.3f, critical=%.3f, stat=%.3f' % (prob, critical, stat))\n",
     "if abs(stat) >= critical:\n",
-    "\tprint('Dependent (reject H0)')\n",
+    "    print('Dependent (reject H0)')\n",
     "else:\n",
-    "\tprint('Independent (fail to reject H0)')"
+    "    print('Independent (fail to reject H0)')"
    ]
   },
   {
@@ -1036,9 +1034,9 @@
     "critical = chi2.ppf(prob, dof)\n",
     "print('probability=%.3f, critical=%.3f, stat=%.3f' % (prob, critical, stat))\n",
     "if abs(stat) >= critical:\n",
-    "\tprint('Dependent (reject H0)')\n",
+    "    print('Dependent (reject H0)')\n",
     "else:\n",
-    "\tprint('Independent (fail to reject H0)')"
+    "    print('Independent (fail to reject H0)')"
    ]
   },
   {
@@ -1073,9 +1071,9 @@
     "critical = chi2.ppf(prob, dof)\n",
     "print('probability=%.3f, critical=%.3f, stat=%.3f' % (prob, critical, stat))\n",
     "if abs(stat) >= critical:\n",
-    "\tprint('Dependent (reject H0)')\n",
+    "    print('Dependent (reject H0)')\n",
     "else:\n",
-    "\tprint('Independent (fail to reject H0)')"
+    "    print('Independent (fail to reject H0)')"
    ]
   },
   {
@@ -1113,9 +1111,9 @@
     "critical = chi2.ppf(prob, dof)\n",
     "print('probability=%.3f, critical=%.3f, stat=%.3f' % (prob, critical, stat))\n",
     "if abs(stat) >= critical:\n",
-    "\tprint('Dependent (reject H0)')\n",
+    "    print('Dependent (reject H0)')\n",
     "else:\n",
-    "\tprint('Independent (fail to reject H0)')"
+    "    print('Independent (fail to reject H0)')"
    ]
   },
   {
@@ -1415,7 +1413,6 @@
     }
    ],
    "source": [
-    "#removing unwanted columns\n",
     "df.drop(['textblob_sentiment', 'nltk_sentiment', 'month', \n",
     "         'year', 'employee_type', 'day', 'day_class', 'anonymity', 'rating'], axis=1, inplace=True)\n",
     "df.head()"
